<?xml version="1.0"?>
<package format="3">
  <name>adapted_flex_sync</name>
  <version>0.1.0</version>
  <description>Sample using flex_sync with type adaptation.</description>
  <maintainer email="mohamed.abdelaziz@tutanota.de">Mohamed Abdelaziz</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>flex_sync</depend>
  <depend>image_tools</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>